feat(list  Authors): -Add middleware to take care of authentication and fix test bug [Updates  #166265918]
